--- a/index.html
+++ b/index.html
@@ -2,20 +2,20 @@
 <html>
 
 <head>
-	<script src="../libraries/p5.js"></script>
-	<script src="../libraries/p5.dom.js"></script>
+	<script src="../libraries/p5.js?version=0"></script>
+	<script src="../libraries/p5.dom.js?version=0"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-	<link rel="stylesheet" href="./style.css">
+	<link rel="stylesheet" href="./style.css?version=0">
 	<title>Enigma</title>
 </head>
 
 <body>
-	<script src="main.js"></script>
-	<script src="rotor.js"></script>
-	<script src="reflector.js"></script>
-	<script src="plugboard.js"></script>
-	<script src="lamppanel.js"></script>
-	<script src="enigma.js"></script>
+	<script src="main.js?version=0"></script>
+	<script src="rotor.js?version=0"></script>
+	<script src="reflector.js?version=0"></script>
+	<script src="plugboard.js?version=0"></script>
+	<script src="lamppanel.js?version=0"></script>
+	<script src="enigma.js?version=0"></script>
 </body>
 
 </html>
