--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 	<script src="../libraries/p5.js?version=0"></script>
 	<script src="../libraries/p5.dom.js?version=0"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-	<link rel="stylesheet" href="./style.css?version=0">
+	<link rel="stylesheet" href="style.css?version=0">
+	<link rel="image" href="favicon.ico">
 	<title>Enigma</title>
 </head>
 
