--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 
 <head>
-	<script src="../libraries/p5.js?version=0"></script>
-	<script src="../libraries/p5.dom.js?version=0"></script>
+	<script src="libraries/p5.js?version=0"></script>
+	<script src="libraries/p5.dom.js?version=0"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 	<link rel="stylesheet" href="style.css?version=0">
 	<link rel="image" href="favicon.ico">
